separate libc from kernel

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,14 +1,18 @@
 
 
-ASM = nasm
-CC = i686-elf-gcc
-CFLAGS = -std=gnu99 -ffreestanding -O2 -Wall -Wextra
+INCLUDE := -I../libc/include
+LIBC_BUILD := ../libc/build
+
+BUILD := build
 
 all: boot kernel
-	$(CC) -T linker.ld -o myos.bin -ffreestanding -O2 -nostdlib boot.o kernel.o -lgcc
+	$(CC) -T linker.ld -o $(BUILD)/myos.bin $(LDFLAGS) $(BUILD)/boot.o $(BUILD)/kernel.o $(LIBC_BUILD)/libc.o -lgcc
 
 boot:
-	$(ASM) -felf32 boot.S -o boot.o
+	$(ASM) -felf32 boot.S -o $(BUILD)/boot.o
 
 kernel:
-	$(CC) -c kernel.c -o kernel.o $(CFLAGS)
+	$(CC) $(INCLUDE) -c kernel.cpp -o $(BUILD)/kernel.o $(CFLAGS)
+
+clean:
+	rm -f $(BUILD)/*
