debug via qemu debug port instead of serial port
it's much simpler

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -9,7 +9,8 @@ KERN_OBJS := \
 	VgaTTY.o
 
 DRIV_OBJS := \
-	$(DRIVERS_DIR)/VgaText.o
+	$(DRIVERS_DIR)/VgaText.o \
+	$(DRIVERS_DIR)/DebugPort.o
 
 HEADERS := $(OBJS:.o=.h)
 
