--- a/libc/Makefile
+++ b/libc/Makefile
@@ -3,8 +3,10 @@
 OBJS := \
 	string.o \
 	printf.o \
+	stdlib.o \
 
 HEADERS := $(OBJS:.o=.h)
+INCLUDE = -I../kernel/
 
 TARGET := libc.o
 
@@ -15,7 +17,7 @@ $(TARGET): $(OBJS)
 	$(LD) --relocatable $^ -o $@
 
 %.o: %.cpp $(HEADERS)
-	$(CC) -c $< -o $@ $(CFLAGS)
+	$(CC) $(INCLUDE) -c $< -o $@ $(CFLAGS)
 
 clean:
 	rm -f *.o
