Clone page directory when creating a new task
Before this commit, all kernel tasks shared the same,
single page directory & page tables.

Starting with this commit, when a new kernel task is created,
it gets a new page directory and page tables.

This way, a change in the virtual memory map of one kernel task
would not affect that of another one.

also fix memcpy (oops!)

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -48,7 +48,7 @@ TARGET := myos.bin
 
 all: $(TARGET)
 
-$(TARGET): init $(OBJS)
+$(TARGET): init $(OBJ_TO_LINK)
 	$(CC) -T linker.ld -o $@ $(LDFLAGS) $(OBJ_TO_LINK) -lgcc
 
 init: $(CRTI_OBJ) $(CRTN_OBJ)
