Keyboard: hook into keyboard IRQ & PS2 Echo

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -22,6 +22,7 @@ DRIV_OBJS := \
 	$(DRIVERS_DIR)/DebugPort.o \
 	$(DRIVERS_DIR)/PIC.o \
 	$(DRIVERS_DIR)/PIT.o \
+	$(DRIVERS_DIR)/PS2Keyboard.o \
 
 MM_DIR := MM
 MM_OBJS := \
