remove kernel subdirs from include namesapce

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -41,7 +41,7 @@ LOADER_OBJS := \
 	$(LOADER_DIR)/loader.o \
 	$(LOADER_DIR)/ElfParser.o \
 
-INCLUDE := -I. -I$(LIBC_INCLUDE) -I$(DRIVERS_DIR) -I$(MM_DIR)
+INCLUDE := -I. -I$(LIBC_INCLUDE)
 
 OBJS := $(KERN_OBJS) $(DRIV_OBJS) $(MM_OBJS) $(FS_OBJS) $(LOADER_OBJS)
 
