Add build system for userspace applications
Each application resides in its own
directory, and has its own makefile.

The makefile is responsible for generating a main.o object,
which is then linked with libc & userspace init code
to generate <AppName>.app
executable.

This executable is copied into the
RamDisk FS

--- a/userspace/Makefile
+++ b/userspace/Makefile
@@ -1,7 +1,10 @@
 
 OBJS := \
 	start.ao \
-	main.o \
+
+APPS := \
+	HelloWorld.app \
+	VgaTTY.app \
 
 LIBC_DIR := ../libc
 LIBC_OBJ := $(LIBC_DIR)/libc.o
@@ -10,20 +13,27 @@ OBJS_TO_LINK := $(OBJS) $(LIBC_OBJ)
 
 INCLUDE := -I$(LIBC_DIR)
 
-all: libc main
+all: libc start.ao apps
 
 libc:
 	make -C $(LIBC_DIR) clean
 	make -C $(LIBC_DIR) LIBCMODE=USERSPACE
 
-main: main.o start.ao
-	$(CC) -T linker.ld -o $@ $(LDFLAGS) $(OBJS_TO_LINK) -lgcc
+apps: $(APPS)
 
-main.o: main.cpp start.S
-	$(CC) $(INCLUDE) -DUSERSPACE -c $< -o $@ $(CFLAGS)
+%.app:
+	make -C $*
+	$(CC) -T linker.ld -o $*.app $(LDFLAGS) $(OBJS_TO_LINK) $*/main.o -lgcc
+
+
+# main: main.o start.ao
+# 	$(CC) -T linker.ld -o $@ $(LDFLAGS) $(OBJS_TO_LINK) -lgcc
+
+# main.o: main.cpp start.S
+# 	$(CC) $(INCLUDE) -DUSERSPACE -c $< -o $@ $(CFLAGS)
 
 %.ao: %.S
 	$(ASM) -felf32 $< -o $@
 
 clean:
-	rm -f *.o *.ao
+	rm -f *.o *.ao *.app
