--- a/userspace/HelloWorld/Makefile
+++ b/userspace/HelloWorld/Makefile
@@ -5,7 +5,7 @@ INCLUDE := -I$(LIBC_DIR)
 all: main.o
 
 main.o: main.cpp
-	$(CC) $(INCLUDE) -DUSERSPACE -c $< -o $@ $(CFLAGS)
+	$(CC) $(INCLUDE) -DUSERSPACE -DMODE -c $< -o $@ $(CFLAGS)
 
 clean:
 	rm -f *.o main
