move VgaTTY to kernel
userspace interface with it via
/dev/vgatty

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -52,6 +52,7 @@ HAL_DIR := HAL
 HAL_OBJS := \
 	$(HAL_DIR)/KeyboardDevice.o \
 	$(HAL_DIR)/VgaTextDevice.o \
+	$(HAL_DIR)/VgaTTY.o \
 
 INCLUDE := -I. -I.. -I$(LIBC_INCLUDE) -Imode/
 
