separate userpsace into terminal/shell
The terminal process starts first
and sets up the file descriptors.

It then spwans the shell process.

--- a/userspace/Makefile
+++ b/userspace/Makefile
@@ -6,6 +6,7 @@ OBJS := \
 APPS := \
 	HelloWorld.app \
 	shell.app \
+	terminal.app \
 
 LIBC_DIR := ../libc
 LIBC_OBJ := $(LIBC_DIR)/libc.o
@@ -40,4 +41,5 @@ FORCE:
 clean:
 	make -C shell/ clean
 	make -C HelloWorld/ clean
+	make -C terminal/ clean
 	rm -f *.o *.ao *.app
