Add 'AsciiKeyboard' device
when reading from this device,
you're guaranteed to block until
an ascii-convertable key was pressed & released in the keyboard.

It is used as the default STDIN device in userspace.

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -53,6 +53,7 @@ HAL_OBJS := \
 	$(HAL_DIR)/KeyboardDevice.o \
 	$(HAL_DIR)/VgaTextDevice.o \
 	$(HAL_DIR)/VgaTTY.o \
+	$(HAL_DIR)/AsciiKeyboardDevice.o \
 
 INCLUDE := -I. -I.. -I$(LIBC_INCLUDE) -Imode/
 
