shell: add 'cat'
The shell spwans the cat() program
and waits for it to finish with the wait() syscall

we don't yet support process arguments,
so cat only 'cats' a constant file

--- a/userspace/Makefile
+++ b/userspace/Makefile
@@ -7,6 +7,7 @@ APPS := \
 	HelloWorld.app \
 	shell.app \
 	terminal.app \
+	cat.app \
 
 LIBC_DIR := ../libc
 LIBC_OBJ := $(LIBC_DIR)/libc.o
@@ -42,4 +43,5 @@ clean:
 	make -C shell/ clean
 	make -C HelloWorld/ clean
 	make -C terminal/ clean
+	make -C cat/ clean
 	rm -f *.o *.ao *.app
