ATA hard disk driver: identify device

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -25,6 +25,7 @@ DRIV_OBJS := \
 	$(DRIVERS_DIR)/PIC.o \
 	$(DRIVERS_DIR)/PIT.o \
 	$(DRIVERS_DIR)/PS2Keyboard.o \
+	$(DRIVERS_DIR)/ATADisk.o \
 
 MM_DIR := MM
 MM_OBJS := \
