Use Fat instead of initrd
note: we currently have a race in Fat32.
we need to implement locks and
protect the disk with them

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ settings.json
 **/*.tar
 
 
-ramdisk/kernel_lineinfo.txt
-ramdisk/kernel_symbols.txt
+init_files/kernel_lineinfo.txt
+init_files/kernel_symbols.txt
 disk_img.bin
 mnt
