[wip] - WindowServer process.
currently just a skeleton that listens for messages from other processes.

Also add a test 'gui' process that
communicates with the window server

--- a/userspace/Makefile
+++ b/userspace/Makefile
@@ -11,6 +11,8 @@ APPS := \
 	echo.app \
 	touch.app \
 	mkdir.app \
+	WindowServer.app \
+	gui.app \
 
 LIBC_DIR := ../libc
 LIBC_OBJ := $(LIBC_DIR)/libc.o
