--- a/userspace/Makefile
+++ b/userspace/Makefile
@@ -18,17 +18,22 @@ APPS := \
 CURRENT_DIR := $(realpath ./)
 GLOBAL_DIR := $(realpath ../)
 LIBC_DIR := $(realpath ../libc)
+LIBGUI_DIR := $(realpath LibGui/)
 LIBC_OBJ := $(LIBC_DIR)/libc.o
+LIBGUI_OBJ := $(LIBGUI_DIR)/LibGui.o
 
-OBJS_TO_LINK := $(OBJS) $(LIBC_OBJ)
+OBJS_TO_LINK := $(OBJS) $(LIBC_OBJ) $(LIBGUI_OBJ)
 
 export INCLUDE := -I$(LIBC_DIR) -I$(CURRENT_DIR) -I$(GLOBAL_DIR)
 
-all: libc start.ao apps
+all: libc libgui start.ao apps
 
 libc:
 	make -C $(LIBC_DIR) clean
 	make -C $(LIBC_DIR) LIBCMODE=USERSPACE
+
+libgui:
+	make -C $(LIBGUI_DIR)
 
 apps: $(APPS)
 
