wip - refactor IPC code into LibWindowServer

--- a/userspace/LibWindowServer/Makefile
+++ b/userspace/LibWindowServer/Makefile
@@ -1,2 +1,16 @@
+TARGET := LibWindowServer.o
+
+OBJS := \
+	IPC.o \
+
+all: $(TARGET)
+
+$(TARGET): $(OBJS)
+	$(LD) --relocatable $^ -o $@
+
+%.o: %.cpp
+	$(CC) $(INCLUDE) -DUSERSPACE -DMODE -c $< -o $@ $(CFLAGS)
 
 clean:
+	rm -f *.o
+
