--- a/userspace/Makefile
+++ b/userspace/Makefile
@@ -19,14 +19,17 @@ CURRENT_DIR := $(realpath ./)
 GLOBAL_DIR := $(realpath ../)
 LIBC_DIR := $(realpath ../libc)
 LIBGUI_DIR := $(realpath LibGui/)
+LIB_WINDOW_SERVER_DIR := $(realpath LibWindowServer/)
+
 LIBC_OBJ := $(LIBC_DIR)/libc.o
 LIBGUI_OBJ := $(LIBGUI_DIR)/LibGui.o
+LIB_WINDOW_SERVER_OBJ := $(LIB_WINDOW_SERVER_DIR)/LibWindowServer.o
 
-OBJS_TO_LINK := $(OBJS) $(LIBC_OBJ) $(LIBGUI_OBJ)
+OBJS_TO_LINK := $(OBJS) $(LIBC_OBJ) $(LIB_WINDOW_SERVER_OBJ) $(LIBGUI_OBJ)
 
 export INCLUDE := -I$(LIBC_DIR) -I$(CURRENT_DIR) -I$(GLOBAL_DIR)
 
-all: libc libgui start.ao apps
+all: libc libgui  lib_windowserver start.ao apps
 
 libc:
 	make -C $(LIBC_DIR) clean
@@ -34,6 +37,9 @@ libc:
 
 libgui:
 	make -C $(LIBGUI_DIR)
+
+lib_windowserver:
+	make -C $(LIB_WINDOW_SERVER_DIR)
 
 apps: $(APPS)
 
