LibGUI: add Widget baseclass, WIP TextView

--- a/userspace/LibGui/Makefile
+++ b/userspace/LibGui/Makefile
@@ -1,9 +1,13 @@
 
 TARGET := LibGui.o
 
+WIDGETS_DIR := Widgets
+
 OBJS := \
 	Window.o \
 	GuiManager.o \
+	$(WIDGETS_DIR)/Widget.o \
+	$(WIDGETS_DIR)/TextView.o \
 
 all: $(TARGET)
 
@@ -14,4 +18,4 @@ $(TARGET): $(OBJS)
 	$(CC) $(INCLUDE) -DUSERSPACE -DMODE -c $< -o $@ $(CFLAGS)
 
 clean:
-	rm -f *.o
+	rm -f *.o $(WIDGETS_DIR)/*.o
