Fonts: Add SimpleFont & draw() in TextView
We can draw the letter 'A'!

--- a/userspace/LibGui/Makefile
+++ b/userspace/LibGui/Makefile
@@ -2,12 +2,14 @@
 TARGET := LibGui.o
 
 WIDGETS_DIR := Widgets
+FONTS_DIR := Fonts
 
 OBJS := \
 	Window.o \
 	GuiManager.o \
 	$(WIDGETS_DIR)/Widget.o \
 	$(WIDGETS_DIR)/TextView.o \
+	$(FONTS_DIR)/SimpleFont.o
 
 all: $(TARGET)
 
@@ -18,4 +20,4 @@ $(TARGET): $(OBJS)
 	$(CC) $(INCLUDE) -DUSERSPACE -DMODE -c $< -o $@ $(CFLAGS)
 
 clean:
-	rm -f *.o $(WIDGETS_DIR)/*.o
+	rm -f *.o $(WIDGETS_DIR)/*.o $(FONTS_DIR)/*.o
