WindowServer: add MouseEvent, IOEvent
When a mouse press happens inside
a gui window, it get a message from
the WindowServer.

Also, MouseEvent and KeyEvent
are now sent in the IPC as
an IOEvent which encapsulates both
event types.

--- a/libc/Makefile
+++ b/libc/Makefile
@@ -14,7 +14,8 @@ LIBC_OBJS := \
 	malloc.o \
 	VgaTextCommon.o \
 	PS2KeyboardCommon.o \
-	Math.o
+	Math.o \
+	Geometry.o \
 
 LIBC_USERSPACE_ONLY_OBJS := \
 	unistd.o \
