--- a/libc/Makefile
+++ b/libc/Makefile
@@ -16,10 +16,16 @@ LIBC_OBJS := \
 	PS2KeyboardCommon.o \
 	Math.o \
 	Geometry.o \
+	errno.o \
+	ctype.o \
 
 LIBC_USERSPACE_ONLY_OBJS := \
 	unistd.o \
+	df_unistd.o \
 	stdio.o \
+	strings.o \
+	math.o \
+	sys/stat.o \
 
 ifeq ($(LIBCMODE), USERSPACE)
 LIBC_OBJS += $(LIBC_USERSPACE_ONLY_OBJS)
