Add ability to block until ARP response is received

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -68,6 +68,7 @@ NETWORK_OBJS := \
 	$(NETWORK_DIR)/Arp.o \
 	$(NETWORK_DIR)/Ethernet.o \
 	$(NETWORK_DIR)/NetworkManager.o \
+	$(NETWORK_DIR)/NetworkTypes.o \
 
 INCLUDE := -I. -I.. -I$(LIBC_INCLUDE) -Imode/
 
