add socket() syscall
Currently only supports ICMP sockets

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -68,6 +68,7 @@ NETWORK_OBJS := \
 	$(NETWORK_DIR)/Arp.o \
 	$(NETWORK_DIR)/Ethernet.o \
 	$(NETWORK_DIR)/Icmp.o \
+	$(NETWORK_DIR)/IcmpSocket.o \
 	$(NETWORK_DIR)/IpV4.o \
 	$(NETWORK_DIR)/NetworkManager.o \
 	$(NETWORK_DIR)/NetworkTypes.o \
